--- a/ltp_html_course/Labs/first_lab.html
+++ b/ltp_html_course/Labs/first_lab.html
@@ -2,9 +2,13 @@
 <!DOCTYPE html>
 <html>
     <head>
-        <title>Document Title</title>
+        <title>Lab #1</title>
     </head>
     <body>
-        
+        <h1>Lab Exercise #1</h1>
+        <p>Chris Mayer, Tolland, Connecticut</p>
+        <p>mayerxc@gmail.com</p>
+        <p>My favorite foods are Sushi, pizza and burritos</p>
+        <p>HTML is the main markup language on the internet</p>
     </body>
 </html>
