added places I'd like to visit

--- a/ltp_html_course/Labs/first_lab.html
+++ b/ltp_html_course/Labs/first_lab.html
@@ -10,5 +10,7 @@
         <p>mayerxc@gmail.com</p>
         <p>My favorite foods are Sushi, pizza and burritos</p>
         <p>HTML is the main markup language on the internet</p>
+        <h1>Places I would like to visit:</h1>
+        <p>Europe, New Zealand and Japan</p>
     </body>
 </html>
