finishing up all of lab 2

--- a/ltp_css_course/02_lab/02_lab.html
+++ b/ltp_css_course/02_lab/02_lab.html
@@ -1,43 +1,43 @@
-<!DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
-    <title>Lab 2</title>
-    <link href="https://fonts.googleapis.com/css?family=Noto+Serif" rel="stylesheet">
+    <title>Lab 2</title>
+    <link href="https://fonts.googleapis.com/cssfamily=Noto+Serif" rel="stylesheet">
     <link rel="stylesheet" href="02_lab.css">
-  
+    <link href="https://fonts.googleapis.com/css?family=Anton" rel="stylesheet">
 </head>
 <body>
-    <div id="my_menu">
-        <table>
-            <tr>
-                <td>
-                    <div class="submenu">
-                        About Me 
-                        <ul>
-                            <li>Height:</li>
-                            <li>Country:</li>
-                            <li>Job:</li>
-                            <li>Favorite Color:</li>
-                        </ul>
-                    </div>
-                </td> 
-            </tr> 
-        </table>
-    </div>
-    <h1>Welcome to Lab 2</h1>
-    <h2>4 Great Pets</h2>
-    <ul>
-        <li>Cats</li>
-        <li>Dogs</li>
-        <li>Birds</li>
-        <li>Hamsters</li>
-    </ul>
- 
-    <h2>The 3 Largest US Cities</h2>
-    <ol reversed="reversed">
-        <li>Chicago</li>
-        <li>Los Angeles</li>
-        <li>New York</li>
-    </ol>
+    <div id="my_menu">
+        <table>
+            <tr>
+                <td>
+                    <div class="submenu">
+                        About me
+                        <ul>
+                            <li>Height: 5'9"</li>
+                            <li>Country: USA</li>
+                            <li>Job: Scientist</li>
+                            <li>Favorite Color: Blue</li>
+                        </ul>
+                    </div>
+                </td> 
+            </tr> 
+        </table>
+    </div>
+    <h1>Welcome to Lab 2</h1>
+    <h2>4 Great Pets</h2>
+    <ul>
+        <li>Cats</li>
+        <li>Dogs</li>
+        <li>Birds</li>
+        <li>Hamsters</li>
+    </ul>
+ 
+    <h2>The 3 Largest US Cities</h2>
+    <ol reversed="reversed">
+        <li>Chicago</li>
+        <li>Los Angeles</li>
+        <li>New York</li>
+    </ol>
 </body>
 </html>
