--- a/ltp_javascript_course/06_lab/06_lab.html
+++ b/ltp_javascript_course/06_lab/06_lab.html
@@ -22,7 +22,7 @@
     </head>
     <body>
         <div id="eventBox1">Click me!</div>
-        <div id="enentBox2">Hover over me!</div>
+        <div id="eventBox2">Hover over me!</div>
     
     </body>
 </html>
