adding in lab 8

--- a/ltp_javascript_course/08_lab/08_lab.html
+++ b/ltp_javascript_course/08_lab/08_lab.html
@@ -5,6 +5,9 @@
         <script src="main.js"></script>
     </head>
     <body>
-        <h1>Find the most frequent item in an array.</h1>
+        <h1>Find the most frequent item in this array.</h1>
+        <h3 id="array"></h3>
+        <button id="button">Click to find out</button>
+        <p id="result"></p>
     </body>
 </html>
