trying to make javascript lab 4 better

--- a/ltp_javascript_course/04_lab/04_lab.html
+++ b/ltp_javascript_course/04_lab/04_lab.html
@@ -2,7 +2,7 @@
 <html>
     <head>
         <title>Lab #4</title>
-        <script src="main.js"></script>
+        <script src="main2.js"></script>
     </head>
     <body>
         <h1>Type in your name several times along with a bunch of random words</h1>
