--- a/Ten Apps/My tip Calculator/index.html
+++ b/Ten Apps/My tip Calculator/index.html
@@ -2,7 +2,7 @@
 <html>
 
 <head>
-   
+
     <title>Tip Calculator</title>
     <meta charset="utf-8" />
     <meta name="format-detection" content="telephone=no" />
@@ -17,8 +17,14 @@
     <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
 
     <style>
-
-
+        [data-role=page]{
+            display: flex;
+            flex-flow: column;
+            height: 100%;
+        }
+        #result{
+            flex-grow: 1;
+        }
     </style>
 </head>
 
@@ -28,9 +34,21 @@
             <h1>Tip Calculator</h1>
         </div>
         <div role="main" class="ui-content">
-            <p>Main content</p>
+            <p>Tip Calculator</p>
+            <form>
+                <label for="billAmount">Bill</label>
+                <input name="billAmount" placeholder="$0.00" id="billAmount" type="number" min="0" max="50000" step="0.01"/>
+                <label for="tipPercent">Tip Percent</label>
+                <input name="tipPercent" id="tipPercent" data-highlight="true" step="1" min="0" max="50" value="15" type="range" />
+                <label for="people">Number of people</label>
+                <input name="people" id="people" data-highlight="true" step="1" min="0" max="20" value="1" type="range" />
+            </form>
+            <div id="result">
+                <p id="tipAmountAns">Tip:</p>
+                <p id="totalAmountAns">Total:</p>
+            </div>
         </div>
-        <div data-role="footer">
+        <div data-position="fixed" data-role="footer">
             <h1>Probably don't need a footer</h1>
         </div>
     </div>
