--- a/Ten Apps/My tip Calculator/index.html
+++ b/Ten Apps/My tip Calculator/index.html
@@ -10,12 +10,14 @@
     <meta name="viewport" content="user-scalable=no, initial-scale=1, maximum-scale=1, minimum-scale=1, width=device-width" />
 
     <!--Links to stylesheets    -->
-    <link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />
-
+    <!--<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />-->
+    <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
+    
     <!--Scripts-->
-    <script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>
-    <script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>
-
+    <!--<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>-->
+    <script src="js/jquery-1.11.1.min.js"></script>
+    <!--<script src="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.js"></script>-->
+    <script src="js/jquery.mobile-1.4.5.min.js"></script>
 
     <script>
         $(document).ready(function() {
@@ -118,7 +120,7 @@
         </div>
 
         <div data-position="fixed" data-role="footer">
-            <h1>Probably don't need a footer</h1>
+            <h1>By <a href="http://chrismayer.me" target="_blank">Chris Mayer</a></h1>
         </div>
 
     </div>
