add chapter 5 solution

--- a/Ten Apps/My tip Calculator/index.html
+++ b/Ten Apps/My tip Calculator/index.html
@@ -11,7 +11,9 @@
 
     <!--Links to stylesheets    -->
     <!--<link rel="stylesheet" href="http://code.jquery.com/mobile/1.4.5/jquery.mobile-1.4.5.min.css" />-->
-    <link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />
+    <!--<link rel="stylesheet" href="css/jquery.mobile-1.4.5.min.css" />-->
+    <!--flat ui-->
+    <link rel="stylesheet" href="css/jquery.mobile.flatui.min.css" />
     
     <!--Scripts-->
     <!--<script src="http://code.jquery.com/jquery-1.11.1.min.js"></script>-->
@@ -64,20 +66,19 @@
 
     </script>
     <style>
-        /*
-        [data-role=page] {
-            height: 100%;
+        a:link, a:visited, a {
+            color: white!important;
+            text-decoration: none;
         }
-*/
-
         .container {
             /*            display: flex;*/
+            
         }
 
         .ui-grid-a {
             /*            border: solid black 1px;*/
             padding-top: 2rem;
-
+            font-size: 1.1rem;
         }
 
         .ui-block-a {
